@@ -1,4 +1,5 @@
 1.1.0
+   - bug [10945] "Få alias argumentet væk fra workflows.xml"
    - bug [10912] "Alle spor af indexingAlias skal væk"
    - bug [10911] "Indfør indexingAlias i PTI_jobs_xml og lad det plugin der skal bruge det hente det frem"
    - bug [10809] "IndexingAlias skal ud af CargoContainerens add metode"
